--- a/nginx.yaml
+++ b/nginx.yaml
@@ -1,21 +1,19 @@
-apiVersion: apps/v1
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: nginx0-deployment
-  labels:
-    app: nginx0-deployment
+  name: nginx-deployment
 spec:
-  replicas: 2
   selector:
     matchLabels:
-      app: nginx0
+      app: nginx
+  replicas: 2 # tells deployment to run 2 pods matching the template
   template:
     metadata:
       labels:
-        app: nginx0
+        app: nginx
     spec:
       containers:
       - name: nginx
-        image: k8s.gcr.io/nginx:1.7.9
+        image: nginx:1.7.9
         ports:
         - containerPort: 80
